# Kalpa

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
kalpa/: __init__.py  __main__.py  cli.py  config.py  diff.py  fork.py  replay.py  snapshot.py  storage.py  timeline.py  ui.py  watcher.py
tests/: conftest.py  test_cli.py  test_config.py  test_diff.py  test_fork.py  test_replay.py  test_snapshot.py  test_storage.py  test_timeline.py  test_watcher.py
