[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalpa"
version = "0.1.0"
description = "Local-first filesystem timeline engine — Git for everything, without Git"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Swadhin Biswas", email = "swadhinbiswas.cse@gmail.com" },
]
keywords = ["filesystem", "timeline", "replay", "undo", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "watchdog>=4.0.0",
    "rich>=13.7.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
ui = ["textual>=0.52.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "textual>=0.52.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/swadhinbiswas/kalpa"
Repository = "https://github.com/swadhinbiswas/kalpa"
Issues = "https://github.com/swadhinbiswas/kalpa/issues"

[project.scripts]
kalpa = "kalpa.cli:app"

[tool.setuptools.packages.find]
include = ["kalpa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["kalpa"]
omit = ["tests/*"]
